--- a/_posts/llm&rag/Ollama/2025-02-17-Ollama7(ing).md
+++ b/_posts/llm&rag/Ollama/2025-02-17-Ollama7(ing).md
@@ -10,4 +10,89 @@ math: true
 pin: true
 ---
 
-openwebui로 접속해보기.
+```bash
+(base) jaoneol@DESKTOP-B7GM3C5:~$ git clone https://github.com/open-webui/open-webui.git
+Cloning into 'open-webui'...
+remote: Enumerating objects: 93061, done.
+remote: Counting objects: 100% (13/13), done.
+remote: Compressing objects: 100% (10/10), done.
+remote: Total 93061 (delta 5), reused 3 (delta 3), pack-reused 93048 (from 3)
+Receiving objects: 100% (93061/93061), 178.37 MiB | 18.47 MiB/s, done.
+Resolving deltas: 100% (61355/61355), done.
+
+(base) jaoneol@DESKTOP-B7GM3C5:~$ cd open-webui/
+(base) jaoneol@DESKTOP-B7GM3C5:~/open-webui$ ls
+CHANGELOG.md         Makefile            cypress.config.ts               docker-compose.gpu.yaml         kubernetes         run-ollama-docker.sh  tailwind.config.js
+CODE_OF_CONDUCT.md   README.md           demo.gif                        docker-compose.playwright.yaml  package-lock.json  run.sh                test
+Caddyfile.localhost  TROUBLESHOOTING.md  docker-compose.a1111-test.yaml  docker-compose.yaml             package.json       scripts               tsconfig.json
+Dockerfile           backend             docker-compose.amdgpu.yaml      docs                            postcss.config.js  src                   update_ollama_models.sh
+INSTALLATION.md      confirm_remove.sh   docker-compose.api.yaml         hatch_build.py                  pyproject.toml     static                uv.lock
+LICENSE              cypress             docker-compose.data.yaml        i18next-parser.config.ts        run-compose.sh     svelte.config.js      vite.config.ts
+(base) jaoneol@DESKTOP-B7GM3C5:~/open-webui$ 
+```
+
+```bash
+(base) jaoneol@DESKTOP-B7GM3C5:~/open-webui$ docker build -t openwebui:latest .
+[+] Building 160.2s (24/29)                                                                                                                                                  docker:default
+[+] Building 161.3s (24/29)                                                                                                                                                  docker:default
+[+] Building 172.8s (30/30) FINISHED                                                                                                                                         docker:default
+ => [internal] load build definition from Dockerfile                                                                                                                                   0.0s
+ => => transferring dockerfile: 6.77kB                                                                                                                                                 0.0s
+ => resolve image config for docker-image://docker.io/docker/dockerfile:1                                                                                                              3.6s
+ => [auth] docker/dockerfile:pull token for registry-1.docker.io                                                                                                                       0.0s
+ => docker-image://docker.io/docker/dockerfile:1@sha256:4c68376a702446fc3c79af22de146a148bc3367e73c25a5803d453b6b3f722fb                                                               2.8s
+ => => resolve docker.io/docker/dockerfile:1@sha256:4c68376a702446fc3c79af22de146a148bc3367e73c25a5803d453b6b3f722fb                                                                   0.0s
+ => => sha256:321a8dfcd7d7961eba146dbd133fae9c59d16eeaebc73b84e93c6bf36ced0dbb 850B / 850B                                                                                             0.0s
+ => => sha256:dfbaeac3c8884ccc4819c898cb14b39a17a21f4d13e5a6b3670669b96d80568a 1.26kB / 1.26kB                                                                                         0.0s
+ => => sha256:07501dea36dacac10d4bcb55e0c725daaea8ec0b07e17c7086d8d6dd38a26f6c 13.14MB / 13.14MB                                                                                       2.7s
+ => => sha256:4c68376a702446fc3c79af22de146a148bc3367e73c25a5803d453b6b3f722fb 8.40kB / 8.40kB                                                                                         0.0s
+ => => extracting sha256:07501dea36dacac10d4bcb55e0c725daaea8ec0b07e17c7086d8d6dd38a26f6c                                                                                              0.1s
+ => [internal] load metadata for docker.io/library/python:3.11-slim-bookworm                                                                                                           3.8s
+ => [internal] load metadata for docker.io/library/node:22-alpine3.20                                                                                                                  5.1s
+ => [auth] library/python:pull token for registry-1.docker.io                                                                                                                          0.0s
+ => [auth] library/node:pull token for registry-1.docker.io                                                                                                                            0.0s
+ => [internal] load .dockerignore                                                                                                                                                      0.0s
+ => => transferring context: 261B                                                                                                                                                      0.0s
+ => CACHED [base  1/13] FROM docker.io/library/python:3.11-slim-bookworm@sha256:7029b00486ac40bed03e36775b864d3f3d39dcbdf19cd45e6a52d541e6c178f0                                       0.0s
+ => [internal] load build context                                                                                                                                                      1.1s
+ => => transferring context: 289.15MB                                                                                                                                                  0.6s
+ => [build 1/6] FROM docker.io/library/node:22-alpine3.20@sha256:40be979442621049f40b1d51a26b55e281246b5de4e5f51a18da7beb6e17e3f9                                                      6.2s
+ => => resolve docker.io/library/node:22-alpine3.20@sha256:40be979442621049f40b1d51a26b55e281246b5de4e5f51a18da7beb6e17e3f9                                                            0.0s
+ => => sha256:d764c248fa50947de02ddfaaa07099ef5b48a2f0266440f5df5ceab6a3139881 50.42MB / 50.42MB                                                                                       4.2s
+ => => sha256:df3c7e414ddbc690ef94528cb886f86ecb4b25a6a846f3613dc87858f5d86fa0 1.39MB / 1.39MB                                                                                         1.7s
+ => => sha256:40be979442621049f40b1d51a26b55e281246b5de4e5f51a18da7beb6e17e3f9 6.43kB / 6.43kB                                                                                         0.0s
+ => => sha256:d3bec89af3388e8a0842860fc2a6de688e3841d06a69453b552ce0b9e6be589e 1.72kB / 1.72kB                                                                                         0.0s
+ => => sha256:64828b6254cf57009ff14249016ad6efaee618ff224a6ffab6112ad4c547cc76 6.18kB / 6.18kB                                                                                         0.0s
+ => => sha256:0a9a5dfd008f05ebc27e4790db0709a29e527690c21bcbcd01481eaeb6bb49dc 3.63MB / 3.63MB                                                                                         1.6s
+ => => extracting sha256:0a9a5dfd008f05ebc27e4790db0709a29e527690c21bcbcd01481eaeb6bb49dc                                                                                              0.1s
+ => => sha256:efb53238908e98aee5da16d697a5e90629bbc09653264f13dd469c04787661d0 446B / 446B                                                                                             2.0s
+ => => extracting sha256:d764c248fa50947de02ddfaaa07099ef5b48a2f0266440f5df5ceab6a3139881                                                                                              0.8s
+ => => extracting sha256:df3c7e414ddbc690ef94528cb886f86ecb4b25a6a846f3613dc87858f5d86fa0                                                                                              0.0s
+ => => extracting sha256:efb53238908e98aee5da16d697a5e90629bbc09653264f13dd469c04787661d0                                                                                              0.0s
+ => [base  2/13] WORKDIR /app/backend                                                                                                                                                  0.1s
+ => [base  3/13] RUN if [ 0 -ne 0 ]; then     if [ 0 -ne 0 ]; then     addgroup --gid 0 app;     fi;     adduser --uid 0 --gid 0 --home /root --disabled-password --no-create-home ap  1.0s
+ => [base  4/13] RUN mkdir -p /root/.cache/chroma                                                                                                                                      0.6s
+ => [base  5/13] RUN echo -n 00000000-0000-0000-0000-000000000000 > /root/.cache/chroma/telemetry_user_id                                                                              0.3s
+ => [base  6/13] RUN chown -R 0:0 /app /root                                                                                                                                           0.5s
+ => [base  7/13] RUN if [ "false" = "true" ]; then     apt-get update &&     apt-get install -y --no-install-recommends git build-essential pandoc netcat-openbsd curl &&     apt-ge  89.1s
+ => [build 2/6] WORKDIR /app                                                                                                                                                           0.5s
+ => [build 3/6] COPY package.json package-lock.json ./                                                                                                                                 0.0s
+ => [build 4/6] RUN npm ci                                                                                                                                                            55.1s
+ => [build 5/6] COPY . .                                                                                                                                                               1.1s
+ => [build 6/6] RUN npm run build                                                                                                                                                     61.6s
+ => [base  8/13] COPY --chown=0:0 ./backend/requirements.txt ./requirements.txt                                                                                                        0.0s
+ => [base  9/13] RUN pip3 install uv &&     if [ "false" = "true" ]; then     pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121 --no-cach  63.6s
+ => [base 10/13] COPY --chown=0:0 --from=build /app/build /app/build                                                                                                                   0.9s
+ => [base 11/13] COPY --chown=0:0 --from=build /app/CHANGELOG.md /app/CHANGELOG.md                                                                                                     0.1s
+ => [base 12/13] COPY --chown=0:0 --from=build /app/package.json /app/package.json                                                                                                     0.0s
+ => [base 13/13] COPY --chown=0:0 ./backend .                                                                                                                                          0.2s
+ => exporting to image                                                                                                                                                                 4.4s
+ => => exporting layers                                                                                                                                                                4.4s
+ => => writing image sha256:89e0298c6e4267128866208ee45e3c4fef9fd3d0550d4243e94ca053e3308104                                                                                           0.0s
+ => => naming to docker.io/library/openwebui:latest                                                                                                                                    0.0s
+
+ 2 warnings found (use docker --debug to expand):
+ - SecretsUsedInArgOrEnv: Do not use ARG or ENV instructions for sensitive data (ENV "OPENAI_API_KEY") (line 63)
+ - SecretsUsedInArgOrEnv: Do not use ARG or ENV instructions for sensitive data (ENV "WEBUI_SECRET_KEY") (line 63)
+
+```
