--- a/_posts/database/2024-11-01-MySQL1.md
+++ b/_posts/database/2024-11-01-MySQL1.md
@@ -3,9 +3,9 @@ title: Introduce and Install MySQL
 description: Let's install MySQL.
 author: DS2Man
 date: 2024-11-01 11:00:00 +0000
-categories: [DB, MySQL]
+categories: [Database, MySQL]
 tags:
-  - DB
+  - Database
   - RDB
   - MySQL
 math: true
