--- a/_posts/database/2024-11-15-Milvus1.md
+++ b/_posts/database/2024-11-15-Milvus1.md
@@ -3,9 +3,9 @@ title: Introduce and Install Milvus and MinIO and Attu
 description: Let's install Milvus and MinIO and Attu.
 author: DS2Man
 date: 2024-11-15 11:00:00 +0000
-categories: [DB, Milvus]
+categories: [Database, Milvus]
 tags:
-  - DB
+  - Database
   - VectorDB
   - Milvus
 math: true
