--- a/_posts/database/2024-11-16-Milvus2.md
+++ b/_posts/database/2024-11-16-Milvus2.md
@@ -3,9 +3,9 @@ title: Collection and Index Creation
 description: Let's create collection and index in Milvus.
 author: DS2Man
 date: 2024-11-16 11:00:00 +0000
-categories: [DB, Milvus]
+categories: [Database, Milvus]
 tags:
-  - DB
+  - Database
   - VectorDB
   - Milvus
 math: true
