--- a/_posts/database/2024-11-17-Milvus3.md
+++ b/_posts/database/2024-11-17-Milvus3.md
@@ -3,9 +3,9 @@ title: Insert data in Collection
 description: Let's insert data in collection.
 author: DS2Man
 date: 2024-11-17 11:00:00 +0000
-categories: [DB, Milvus]
+categories: [Database, Milvus]
 tags:
-  - DB
+  - Database
   - VectorDB
   - Milvus
 math: true
