--- a/_posts/database/2024-11-18-Milvus4.md
+++ b/_posts/database/2024-11-18-Milvus4.md
@@ -3,9 +3,9 @@ title: Search data in Collection
 description: Let's search data in collection.
 author: DS2Man
 date: 2024-11-18 11:00:00 +0000
-categories: [DB, Milvus]
+categories: [Database, Milvus]
 tags:
-  - DB
+  - Database
   - VectorDB
   - Milvus
 math: true
