--- a/_posts/frontend/svelte/2025-03-24-Svelte1.md
+++ b/_posts/frontend/svelte/2025-03-24-Svelte1.md
@@ -25,9 +25,9 @@ _Frontend Framework(Source: [Stateofjs](https://2024.stateofjs.com/en-US/librari
 
 |Framework|Features|
 |---|---|
-|**React**|The most widely adopted framework, known for its power and flexibility. Supports a vast ecosystem of libraries and tools. However, it comes with a relatively steep learning curve.|
-|**Vue.js**|Easy to learn and beginner-friendly. Offers component-based development, making it easier to organize and manage code strategically.|
-|**Svelte**|A fast and lightweight framework. Compiles to highly optimized JavaScript at build time, making it ideal for efficient development with minimal code.|
+|**React**|The most widely adopted framework, known for its power and flexibility.<br>Supports a vast ecosystem of libraries and tools. <br>However, it comes with a relatively steep learning curve.|
+|**Vue.js**|Easy to learn and beginner-friendly. <br>Offers component-based development, <br>making it easier to organize and manage code strategically.|
+|**Svelte**|A fast and lightweight framework. <br>Compiles to highly optimized JavaScript at build time, <br>making it ideal for efficient development with minimal code.|
 
 Each framework has its own strengths. If you want flexibility and community support, React is a solid choice. If you prefer simplicity and ease of use, Vue.js is worth considering. And if you're looking for high performance with minimal complexity, Svelte might be the perfect fit.
 
@@ -88,7 +88,7 @@ const incrementCount = () => {
 |**Writing Style**|Easy to write based on the existing HTML, CSS, and JavaScript structure (similar to Vue)|
 |**Code Size**|Allows writing smaller and cleaner code compared to other frameworks|
 |**Reactivity**|Provides fast reactivity without using a virtual DOM|
-|**Bundle Size**|Generates a smaller bundle size during build, which helps overcome the drawbacks of SPA (Single Page Application)|
+|**Bundle Size**|Generates a smaller bundle size during build, <br>which helps overcome the drawbacks of SPA (Single Page Application)|
 
 ![Bundling](/assets/img/svelte/2025-03-24-SVELTE_2.png)
 _Bundling(Source: [csslink](https://www.youtube.com/watch?v=hWbwu5dM7k8))_
@@ -134,7 +134,7 @@ _[npm official website](https://www.npmjs.com/)_
 
 With **npm (Node Package Manager)**, you can install countless JavaScript packages.  
 It allows you to easily use various libraries and tools in your development process. You can browse these packages on the [npm official website](https://www.npmjs.com/).  
-You’ll also notice that the framework we’ll be using — Svelte — is available there as well.
+You’ll also notice that the framework we’ll be using **Svelte**is available there as well.
 
 <!--
 **npm(Node Package Manager)**를 통해서 수많은 JavaScript 패키지를 설치할 수 있다. 이를 사용해서 다양한 라이브러리와 도구를 사용할 수 있다. [npm](https://www.npmjs.com/). 앞으로 우리가 사용해야 할 Framework인 Svelte도 등록되어 있음을 볼수 있다.
