--- a/_posts/frontend/svelte/2025-03-24-Svelte2.md
+++ b/_posts/frontend/svelte/2025-03-24-Svelte2.md
@@ -22,12 +22,17 @@ As of March 22, 2025, when I visited the official site, I noticed that the Vite 
 ![Svelte and Vite](/assets/img/svelte/2025-03-24-SVELTE2_1.png)
 _Svelte and Vite_
 
+## *Make Project*
+
+The command is simple. Just enter the following and proceed. You’ll be prompted to select a framework and a variant.
+
+- `npm create vite@latest`   
+
 ```bash
 PS D:\02.MyCode\GP-MyReference\21.MySvelte> npm create vite@latest
 Need to install the following packages:
 create-vite@6.3.1
 Ok to proceed? (y) y
-
 
 > npx
 > cva
@@ -50,5 +55,224 @@ Ok to proceed? (y) y
   npm install   # Installs the packages related to the project.
   npm run dev   # Runs the development server. 
 
-PS D:\02.MyCode\GP-MyReference\21.MySvelte> 
+PS D:\02.MyCode\GP-MyReference\21.MySvelte>
 ```
+
+The directory structure of the generated project is as follows.
+
+```
+/svelte-javascript-vite-project
+├── /.vscode
+├── /public
+│	└── vite.svg
+├── /src
+│   ├── /assets
+│   ├── /lib
+│   ├── app.css
+│   ├── App.svelte
+│   ├── main.js
+│   └── vite-env.d.ts
+├── .gitignore
+├── index.html
+├── jsconfig.json
+├── package.json
+├── README.md
+├── svelte.config.js
+└── vite.config.js
+```
+
+
+Once the project has been created, follow the steps below.    
+- `cd svelte-javascript-vite-project`  # Move the project directory.   
+  `npm install`   # Installs the packages related to the project.   
+  `npm run dev`   # Runs the development server.    
+
+```
+PS .. \21.MySvelte> cd svelte-javascript-vite-project
+PS .. \svelte-javascript-vite-project> npm install
+up to date, audited 37 packages in 642ms
+3 packages are looking for funding
+  run `npm fund` for details
+found 0 vulnerabilities
+PS .. \svelte-javascript-vite-project> npm run dev
+> svelte-javascript-vite-project@0.0.0 dev
+> vite
+
+오전 11:18:10 [vite] (client) Forced re-optimization of dependencies
+
+  VITE v6.2.3  ready in 578 ms
+
+  ➜  Local:   http://localhost:5173/
+  ➜  Network: use --host to expose
+  ➜  press h + enter to show help
+```
+
+The directory structure of the project, including the added files, is as follows.
+
+```
+/svelte-javascript-vite-project
+├── /.vscode
+├── /node_modules # adding
+├── /public
+│	└── vite.svg
+├── /src
+│   ├── /assets
+│   ├── /lib
+│   ├── app.css
+│   ├── App.svelte
+│   ├── main.js
+│   └── vite-env.d.ts
+├── .gitignore
+├── index.html
+├── jsconfig.json
+├── package-lock.json # adding
+├── package.json
+├── README.md
+├── svelte.config.js
+└── vite.config.js
+```
+
+![My Svelte Page](/assets/img/svelte/2025-03-24-SVELTE2_2.png)
+_My Svelte Page_
+
+## *Project Structure Overview*
+
+#### *Key File Descriptions*
+
+|File|Description|
+|---|---|
+|**package.json**|A configuration file that defines the project's basic information, dependencies, and scripts.<br>It is mainly used for package management and project environment settings.|
+|**index.html**|The entry point HTML file of the application. It serves as the base page displayed <br>in the browser and contains the element where the Svelte app will be rendered.|
+|**src/main.js**|The entry point JavaScript file of the Svelte application. <br>It imports the Svelte component and mounts it to a specific DOM element in `index.html`.|
+
+```bash
+# package.json
+
+{
+  "name": "svelte-javascript-vite-project",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",             # Runs Vite using the command `npm run dev`
+    "build": "vite build",     # Builds the project for production deployment
+    "preview": "vite preview"  # Serves the built project locally for testing
+  },
+  "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "svelte": "^5.20.2",
+    "vite": "^6.2.0"
+  }
+}
+```
+
+```html
+<!-- index.html -->
+
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + Svelte</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script> <!-- src/main.js -->
+  </body>
+</html>
+
+```
+
+```javascript
+// src/main.js
+
+import { mount } from 'svelte'
+import './app.css'
+import App from './App.svelte' // Main components
+
+const app = mount(App, {
+  target: document.getElementById('app'),
+})
+
+export default app
+```
+
+```bash
+// src/App.svelte
+
+<script>
+  import svelteLogo from './assets/svelte.svg'
+  import viteLogo from '/vite.svg'
+  import Counter from './lib/Counter.svelte'
+</script>
+
+<main>
+  <div>
+    <a href="https://vite.dev" target="_blank" rel="noreferrer">
+      <img src={viteLogo} class="logo" alt="Vite Logo" />
+    </a>
+    <a href="https://svelte.dev" target="_blank" rel="noreferrer">
+      <img src={svelteLogo} class="logo svelte" alt="Svelte Logo" />
+    </a>
+  </div>
+  <h1>Vite + Svelte</h1>
+
+  <div class="card">
+    <Counter />
+  </div>
+
+  <p>
+    Check out <a href="https://github.com/sveltejs/kit#readme" target="_blank" rel="noreferrer">SvelteKit</a>, the official Svelte app framework powered by Vite!
+  </p>
+
+  <p class="read-the-docs">
+    Click on the Vite and Svelte logos to learn more
+  </p>
+</main>
+
+<style>
+  .logo {
+    height: 6em;
+    padding: 1.5em;
+    will-change: filter;
+    transition: filter 300ms;
+  }
+  .logo:hover {
+    filter: drop-shadow(0 0 2em #646cffaa);
+  }
+  .logo.svelte:hover {
+    filter: drop-shadow(0 0 2em #ff3e00aa);
+  }
+  .read-the-docs {
+    color: #888;
+  }
+</style>
+```
+
+#### *Structure of file.svelte*
+
+The structure of a Svelte file is as follows. It consists of three main sections: `script`, `main`, and `style`, each serving the following purpose:
+
+```bash
+<script>
+  # JavaScript section: handles the logic
+  # For example: click events, data processing, API calls, etc.
+</script>
+
+<main>
+  # HTML section: defines the main content of the web page
+</main>
+
+<style>
+  # CSS section: defines the styles
+</style>
+```
+
+#### *Install Svelte for VS Code*
+
+**Svelte for VS Code** is an extension that helps you develop more efficiently with the Svelte framework in the Visual Studio Code editor. Let’s install it.
+
+![Svelte for VS Code](/assets/img/svelte/2025-03-24-SVELTE2_3.png)
+_Svelte for VS Code_
