--- a/_posts/frontend/svelte/2025-03-24-Svelte1.md
+++ b/_posts/frontend/svelte/2025-03-24-Svelte1.md
@@ -11,7 +11,7 @@ pin: true
   
 ## *Introuduce Svelte*
 
-**Svelte** is an emerging JavaScript framework that has been gaining traction and growing rapidly following the rise of React and Vue. In modern web development, building everything solely with HTML, CSS, and JavaScript is inefficient and time-consuming. That’s why developers turn to libraries and frameworks to streamline the process. Today, not only frontend development but the entire software ecosystem has become increasingly complex. Especially in the case of frontend frameworks, the abundance of options has created a significant learning curve for developers. Svelte aims to address this challenge and could be the solution to simplify frontend development.
+**[Svelte](https://svelte.dev/)** is an emerging JavaScript framework that has been gaining traction and growing rapidly following the rise of React and Vue. In modern web development, building everything solely with HTML, CSS, and JavaScript is inefficient and time-consuming. That’s why developers turn to libraries and frameworks to streamline the process. Today, not only frontend development but the entire software ecosystem has become increasingly complex. Especially in the case of frontend frameworks, the abundance of options has created a significant learning curve for developers. Svelte aims to address this challenge and could be the solution to simplify frontend development.
 
 <!--
 Svelte는 React, Vue 이후 주목 받고 성장하고 있는 새로운 유형의 자바스크립트 프레임워크이다.
@@ -25,9 +25,9 @@ _Frontend Framework(Source: [Stateofjs](https://2024.stateofjs.com/en-US/librari
 
 |Framework|Features|
 |---|---|
-|**React**|The most widely adopted framework, known for its power and flexibility.<br>Supports a vast ecosystem of libraries and tools. <br>However, it comes with a relatively steep learning curve.|
-|**Vue.js**|Easy to learn and beginner-friendly. <br>Offers component-based development, making it easier to organize and manage code strategically.|
-|**Svelte**|A fast and lightweight framework. <br>Compiles to highly optimized JavaScript at build time, <br>making it ideal for efficient development with minimal code.|
+|**[React](https://react.dev/)**|The most widely adopted framework, known for its power and flexibility.<br>Supports a vast ecosystem of libraries and tools. <br>However, it comes with a relatively steep learning curve.|
+|**[Vue.js](https://vuejs.org/)**|Easy to learn and beginner-friendly. <br>Offers component-based development, making it easier to organize and manage code strategically.|
+|**[Svelte](https://svelte.dev/)**|A fast and lightweight framework. <br>Compiles to highly optimized JavaScript at build time, <br>making it ideal for efficient development with minimal code.|
 
 Each framework has its own strengths. If you want flexibility and community support, React is a solid choice. If you prefer simplicity and ease of use, Vue.js is worth considering. And if you're looking for high performance with minimal complexity, Svelte might be the perfect fit.
 
