--- a/_posts/frontend/svelte/2025-03-24-Svelte2.md
+++ b/_posts/frontend/svelte/2025-03-24-Svelte2.md
@@ -22,7 +22,7 @@ As of March 22, 2025, when I visited the official site, I noticed that the Vite 
 ![Svelte and Vite](/assets/img/svelte/2025-03-24-SVELTE2_1.png)
 _Svelte and Vite_
 
-## *Make Project*
+## *Create Project*
 
 The command is simple. Just enter the following and proceed. You’ll be prompted to select a framework and a variant.
 
@@ -145,7 +145,7 @@ _My Svelte Page_
 |**index.html**|The entry point HTML file of the application. It serves as the base page displayed <br>in the browser and contains the element where the Svelte app will be rendered.|
 |**src/main.js**|The entry point JavaScript file of the Svelte application. <br>It imports the Svelte component and mounts it to a specific DOM element in `index.html`.|
 
-```bash
+```json
 # package.json
 
 {
@@ -154,9 +154,9 @@ _My Svelte Page_
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",             # Runs Vite using the command `npm run dev`
-    "build": "vite build",     # Builds the project for production deployment
-    "preview": "vite preview"  # Serves the built project locally for testing
+    "dev": "vite",             // Runs Vite using the command `npm run dev`
+    "build": "vite build",     // Builds the project for production deployment
+    "preview": "vite preview"  // Serves the built project locally for testing
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
@@ -199,7 +199,7 @@ const app = mount(App, {
 export default app
 ```
 
-```bash
+```javascript
 // src/App.svelte
 
 <script>
@@ -251,22 +251,37 @@ export default app
 </style>
 ```
 
+```javascript
+// src/lib/Counter.svelte
+
+<script>
+  let count = $state(0)
+  const increment = () => {
+    count += 1
+  }
+</script>
+
+<button onclick={increment}>
+  count is {count}
+</button>
+```
+
 #### *Structure of file.svelte*
 
 The structure of a Svelte file is as follows. It consists of three main sections: `script`, `main`, and `style`, each serving the following purpose:
 
-```bash
+```javascript
 <script>
-  # JavaScript section: handles the logic
-  # For example: click events, data processing, API calls, etc.
+  // JavaScript section: handles the logic
+  // For example: click events, data processing, API calls, etc.
 </script>
 
 <main>
-  # HTML section: defines the main content of the web page
+  <!-- HTML section: defines the main content of the web page -->
 </main>
 
 <style>
-  # CSS section: defines the styles
+  // CSS section: defines the styles
 </style>
 ```
 
