--- a/_posts/frontend/svelte/2025-03-25-Svelte3.md
+++ b/_posts/frontend/svelte/2025-03-25-Svelte3.md
@@ -11,16 +11,62 @@ pin: true
   
 ## *Basic and declarative rendering*
 
+#### *Understanding*
+
+I’ve covered the basic Svelte syntax, function usage, and how to apply CSS.  
+I’ll continue to add more detailed content as needed.
+- Imports the content of another.svelte
+- Declare functions
+- Svelte Class Directive
+
+Svelte provides **directive syntax** to easily handle events, classes, styles, transitions, and more, directly in your template. Here’s a simple table of the most commonly used directives:
+
+|Directive Type|Syntax Example|Description|
+|---|---|---|
+|**Class Directive**|`class:myactive={isActive}`|Adds a class when the condition is `true`|
+|**Style Directive**|`style:color={textColor}`|Dynamically applies an inline style|
+|**Event Directive**|`on:click={handleClick}`|Runs a function when an event occurs|
+|**Bind Directive**|`bind:value={inputValue}`|Two-way binding between a variable and an element|
+|**Transition Directive**|`transition:fade`|Adds transition when the element enters/leaves|
+|**In Directive**|`in:fade`|Applies animation when element appears|
+|**Out Directive**|`out:fade`|Applies animation when element disappears|
+|**Animate Directive**|`animate:flip`|Animates layout changes in lists or positions|
+|**Ref Directive**|`bind:this={element}`|References a DOM element|
+
+```svelte
+// Class Directive
+<h1 class:myactive={isActive}>Hello!</h1>
+
+// Style Directive
+<p style:color={isActive ? 'blue' : 'black'}>Text</p>
+
+// Event Directive
+<button on:click={handleClick}>Click me</button>
+
+// Bind Directive
+<input bind:value={username} />
+<p>Your name: {username}</p>
+
+// Transition Directive
+<div transition:fade>
+  I will fade in and out
+</div>
+```
+
+#### *Examples*
+
 - App.svelte
 
 ```svelte
 <script>
+  // # Imports the content of another.svelte
   // Imports the content of Hello.svelte using the import statement
   import Hello from './Hello.svelte'
   
   let name = "App.svelte"
   let isActive = false
 
+  // # Declare functions
   // In most JS/TS projects, it is a standard practice to declare functions using const
   const change_name = () => {
     name = "DS2Man"
@@ -30,6 +76,7 @@ pin: true
 
 <main>
   <!-- 
+	# Svelte Class Directive
     1. Use curly braces to insert declared variables
     2. This is an example where the class is applied conditionally based on a boolean value
   -->
@@ -78,4 +125,150 @@ pin: true
 ```
 
 ![Click Result](/assets/img/svelte/2025-03-24-SVELTE3_1.png)
+_Click Result_
+
+  
+## *Conditional Statements and Loops*
+
+#### *Understanding*
+
+Conditionals and loops in Svelte use this structure:    
+	- `#` to start    
+    - `/` to end    
+    - `:` for intermediate branches
+
+`{#if} ... {:else}` Statement
+
+```svelte
+<script>
+  let score = 85;
+</script>
+
+{#if score >= 90}
+  <p>Grade: A</p>
+{:else if score >= 80}
+  <p>Grade: B</p>
+{:else}
+  <p>Keep trying!</p>
+{/if}
+```
+
+Looping with `{#each}`
+
+```svelte
+<script>
+  let fruits = ['Apple', 'Banana', 'Cherry'];
+</script>
+
+<ul>
+  {#each fruits as fruit}
+    <li>{fruit}</li>
+  {/each}
+</ul>
+```
+
+Using a Key for Efficient Updates.    
+(user.id) here is a key identifier.  When items are added to the list, having a key helps render efficiently.
+
+```svelte
+<script>
+  let users = [
+    { id: 1, name: 'Alice' },
+    { id: 2, name: 'Bob' }
+  ];
+</script>
+
+<ul>
+  {#each users as user (user.id)}
+    <li>{user.name}</li>
+  {/each}
+</ul>
+```
+
+#### *Examples*
+
+- App.svelte
+
+```svelte
+<script>
+  //////////////////////////////////////////////////////////////
+  // Variables and functions for Conditional Statements
+  let name = "App.svelte"
+  let count = 0
+
+  const increment = () => {
+    count = count >= 7 ? 0 : count + 1
+    
+    // Alternative approach:
+    // count += 1
+    // if (count > 7){
+    //   count = 0
+    // }
+  }
+
+  //////////////////////////////////////////////////////////////
+  // Variables and functions for Loop Statements
+  let fruits = [
+    { id: 1, name: 'Apple' },
+    { id: 2, name: 'Banna' },
+    { id: 3, name: 'Cherry' },
+    { id: 4, name: 'Orange' },
+    { id: 5, name: 'Mango' }
+  ]
+
+  // The spread operator expands the elements of an array.
+  // Example:
+  // const arr1 = [1, 2];
+  // ...arr1 returns 1, 2
+  
+  const deletefruit = () => {
+    fruits = [...fruits.slice(0, 2), ...fruits.slice(3)];
+  }
+</script>
+
+<main>
+  <button on:click={increment}>
+    Click! (Count: {count})
+  </button>
+
+  <!-- Conditional Statements -->
+  {#if count <= 2}
+    <h1 class="myactive">Count: {count}, This is {name}!</h1>
+  {:else if count > 2 && count < 5}
+    <h1>Count: {count}, This is DS2!</h1>
+  {:else}
+    <h1>Count: {count}, This is DS2Man!</h1>
+  {/if}
+
+  <!-- Loop Statements -->
+  <button on:click={deletefruit}>
+    Delete Fruit (Length: {fruits.length})!
+  </button>
+
+  <!--
+    (fruit) here is a key identifier.
+    When items are added to the list, having a key helps render efficiently.
+  -->
+  {#each fruits as fruit (fruit.id)}
+    <li class:mycondition={fruit.id % 2 === 1}>
+      {fruit.name}
+    </li>
+  {/each}
+</main>
+
+<style>
+  h1 {
+    color: green;
+  }
+  .myactive {
+    color: blue;
+  }
+  .mycondition {
+    color: red;
+  }
+</style>
+```
+
+
+![Click Result](/assets/img/svelte/2025-03-24-SVELTE3_2.png)
 _Click Result_
